--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,6 +15,9 @@ img {
   max-width: 100%;
 }
 
+.login-div { 
+  margin-top: 20px;
+}
 /* --------------------------------------------------------------------------------
 Container
 -------------------------------------------------------------------------------- */
